K8S/letwecook-web-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: letwecook-web-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: letwecook-web
  template:
    metadata:
      labels:
        app: letwecook-web
    spec:
      containers:
        - name: letwecook-web
          image: tindocker88/letwecook-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5016
---
apiVersion: v1
kind: Service
metadata:
  name: letwecook-web-clusterip-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: letwecook-web
  ports:
    - name: letwecook-web
      protocol: TCP
      port: 80
      targetPort: 5016
---
apiVersion: v1
kind: Service
metadata:
  name: letwecook-web-srv
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: letwecook-web
  ports:
    - name: letwecook-web
      protocol: TCP
      port: 80
      targetPort: 5016
